# fault-agent

./: .env.example  .gitignore  AGENTS.md  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
apps/: __init__.py
apps/agent_worker/: __init__.py  main.py  telemetry_tool.py
apps/api/: __init__.py  composition.py  main.py
apps/task_worker/: main.py
contracts/: __init__.py  generate_jsonschema.py  version.py
contracts/examples/: confirmed-fault.valid.json  diagnosis-request.valid.json  diagnosis-result.insufficient-evidence.json  diagnosis-result.multiple-hypotheses.json  diagnosis-result.reported-fault.json  error-response.json  recommendation.valid.json  telemetry-query.invalid.json  telemetry-query.valid.json  telemetry-result.acceptable.json  telemetry-result.insufficient.json
contracts/jsonschema/: anomaly.schema.json  asset.schema.json  claim.schema.json  component.schema.json  confirmed-fault.schema.json  data-quality-summary.schema.json  diagnosis-request.schema.json  diagnosis-result.schema.json  drive-system.schema.json  error-response.schema.json  evidence.schema.json  hypothesis.schema.json  observation.schema.json  recommendation.schema.json  reported-event.schema.json  request-context.schema.json  signal-definition.schema.json  telemetry-query-command.schema.json  (+2 more)
doc/: 项目快速上手.md
fault_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
modules/: __init__.py
shared/: __init__.py  context.py  errors.py  identifiers.py  time.py
tests/: __init__.py
tools/: __init__.py  profile_real_data.py
(+86 files in other folders)
