[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "fault-agent"
version = "0.1.0"
description = "Modular monolith skeleton for the faultAgent backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116,<1.0",
    "pydantic>=2.11,<3.0",
    "pymysql>=1.1,<2.0",
    "uvicorn[standard]>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "mypy>=1.17,<2.0",
    "pytest>=8.4,<10.0",
    "ruff>=0.12,<1.0",
    "types-PyMySQL>=1.1,<2.0",
]

[project.scripts]
fault-agent-api = "apps.api.main:run"
fault-agent-worker = "apps.agent_worker.main:main"

[tool.setuptools.packages.find]
include = ["apps*", "contracts*", "modules*", "tools*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
allowed-confusables = ["，", "：", "（", "）"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["apps", "contracts", "modules", "tests", "tools"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
